# holiday_acres

./: .gitignore  .prettierignore  README.md  docker-compose.yml  nano_copy.txt  nginx.conf  package.json  pyproject.toml  requirements.txt
.circleci/: config.yml
api/: .env.example  Dockerfile  manage.py  pyproject.toml  setup.cfg
api/api/: settings.py  urls.py
api/holiday_acres_api/: apps.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
api/holiday_acres_api/fixtures/: 0001_initial_seed.json
api/holiday_acres_api/migrations/: 0001_initial.py  0002_auto_20211014_1932.py  0002_auto_20211123_2219.py  0002_paddock.py  0003_auto_20211210_1037.py  0003_remove_paddock_last_maintained.py  0004_horse_stall.py  0004_rename_name_paddock_paddock_name.py  0005_auto_20211210_1137.py  0005_paddock_name.py  0006_alter_feed_horse.py  0006_horse.py  0007_auto_20211211_1511.py  0008_auto_20211211_1529.py  0009_alter_feed_amount.py  0010_auto_20211212_2041.py  0010_auto_20211220_2039.py  0011_merge_0010_auto_20211212_2041_0010_auto_20211220_2039.py  0012_alter_feed_unit.py  0013_horse_public_photo_url.py  0014_auto_20220605_1431.py  0015_auto_20220606_1031.py
api/holiday_acres_api/models/: Barn_Sections.py  Barn_sections.py  Barns.py  Feeds.py  Horses.py  Owners.py  Paddocks.py  Users.py  __init__.py
barn-api-service/: README.md  alembic.ini  barn-api-service.sublime-project  barn-api-service.sublime-workspace  database.py  main.py  pyproject.toml
barn-api-service/models/: BarnSection.py
barn-api-service/services/: barn_service.py
(+72 files in other folders)
