[tool.poetry]
name = "holiday_acres"
version = "0.1.0"
description = ""
authors = ["Matt Hunt <mstephenhunt@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
pre-commit = "^2.15.0"
black = "^21.9b0"
django-cors-headers = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
