[tool.poetry]
name = "barn-api-service"
version = "0.1.0"
description = ""
authors = ["Matt Hunt <mstephenhunt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
